--- a/src/base/templates/index.jade
+++ b/src/base/templates/index.jade
@@ -1,11 +1,13 @@
 doctype html
 
+- load staticfiles
+
 html
   head
     link(
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css")
-    link(href="/css/app.css" rel="stylesheet")
+    link(href="{% static 'css/app.css' %}" rel="stylesheet")
     link(
       rel="stylesheet"
       href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css")
