--- a/src/assets/sass/app.sass
+++ b/src/assets/sass/app.sass
@@ -42,6 +42,7 @@ body
   overflow: hidden
 
   #topbar
+    position: relative
     width: 100%
     height: $topbar-h
     background-color: white
@@ -49,6 +50,30 @@ body
     top: 0px
     left: 0px
     z-index: 1001
+
+    #topbar-poly
+      position: absolute
+      left: 0px
+      top: 0px
+      height: 60px
+      width: 100%
+
+      svg
+        position: absolute
+        left: 0px
+        top: 0px
+        width: 100%
+        height: 100%
+
+    #logo
+      position: relative
+      height: 60px
+      overflow: hidden
+
+      img
+        position: absolute
+        top: -20px
+        height: 100px
 
     #search
       padding-top: 15px
