--- a/src/base/templates/index.jade
+++ b/src/base/templates/index.jade
@@ -16,9 +16,24 @@ html
 
 
     #topbar
+      #topbar-poly
+        svg(preserveAspectRatio="none" viewbox="0 0 100 100")
+          path(id="topbar-shard" d="M0 0 L50 0 L55 100 L0 100 z")
+          style(type="text/css")
+            path#topbar-shard {
+              fill: url(#bg-gradient);
+            }
+          defs
+            linearGradient(id="bg-gradient")
+              stop(offset="5%" stop-color="#C63D0F")
+              stop(offset="95%" stop-color="#DB5021")
+
       .container
         .row
-          #search.col-xs-6
+          #logo.col-xs-1
+            img(src="{% static 'images/beeldmerk.svg' %}")
+
+          #search.col-xs-5
             input(type="text" placeholder="Search")
 
           #whoami.col-xs-6
