Added legacy app for 'legacy' models Useful for talking to the current production database

--- a/src/forum/templates/forum_draad.jade
+++ b/src/forum/templates/forum_draad.jade
@@ -1,7 +1,7 @@
 - for post in posts
   div.forum-post
     div.tag
-      | {{ post.user_id }}
+      | {{ post.user.formal_name }}
     div.text
       p
       | {{ post.tekst }}
