Blam dynamic permission conditions logic Kinda magical

--- a/src/base/templates/index.jade
+++ b/src/base/templates/index.jade
@@ -12,6 +12,9 @@ html
       rel="stylesheet"
       href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css")
 
+    script(src="https://code.jquery.com/jquery-2.1.4.min.js")
+    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js")
+
   body
 
 
