--- a/src/forum/templates/forum_main.jade
+++ b/src/forum/templates/forum_main.jade
@@ -2,7 +2,7 @@
 
 div.dropdown
   button#forum-delen.btn.btn-default.dropdown-toggle(type="button" data-toggle="dropdown")
-    | Dropdown
+    | Fora
     span.caret
   ul.dropdown-menu(aria-labelledby="forum-delen")
     - for cat, delen in categories.items
@@ -11,7 +11,7 @@ div.dropdown
 
       - for deel in delen
         li
-          a(href="?deel={{ deel }}" role="menuitem")
-            | {{ deel }}
+          a(href="?forum={{ deel.forum_id }}" role="menuitem")
+            | {{ deel.titel }}
 
 - render_table posts
