--- a/src/forum/templates/forum_draad.jade
+++ b/src/forum/templates/forum_draad.jade
@@ -2,6 +2,13 @@
   div.forum-post
     div.tag
       | {{ post.user.formal_name }}
+      | ({{ post.datum_tijd|timesince }} geleden)
     div.text
       p
       | {{ post.tekst }}
+
+div#new-forum-post
+  form(method="post" action="{% url 'forum.draad' draad.pk %}")
+    - csrf_token
+    {{ new_post_form }}
+    input(type="submit")
