--- a/src/assets/sass/colors.sass
+++ b/src/assets/sass/colors.sass
@@ -1,8 +1,8 @@
-$blue : #27CDE3
+$blue : desaturate(#224BAF, 15%)
 $dblue: darken(#27CDE3, 10%)
 
 $neutral-dark: #333333
 $neutral-medium: lighten($neutral-dark, 35%)
 $neutral-light: lighten($neutral-medium, 35%)
-$accent: #C63D0F
+$accent: $blue
 $accent-inv: white
