--- a/src/base/templates/groep.jade
+++ b/src/base/templates/groep.jade
@@ -1,9 +1,10 @@
 
 - for groep, leden in groepen.values
-  div.groep
-    h2 {{ groep.naam }}
+  - if leden|length > 0
+    div.groep
+      h2 {{ groep.naam }}
 
-    .leden
-      ul
-        - for lid in leden
-          li {{ lid.user.formal_name }}
+      .leden
+        ul
+          - for lid in leden
+            li {{ lid.user.formal_name }}
