--- a/src/assets/sass/app.sass
+++ b/src/assets/sass/app.sass
@@ -12,23 +12,24 @@
 $topbar-h: 60px
 $topmenu-h: 40px
 
-h1
+h1, h2, h3
   font-family: Lato
-  font-size: $font-huge
   font-weight: 300
+  margin-bottom: 8px
   margin-top: 10px
+
+h1
+  font-size: $font-huge
 
 h2
-  font-family: Lato
   font-size: $font-large
-  font-weight: 300
-  margin-top: 10px
 
 h3
-  font-family: Lato
   font-size: $font-Medium
-  font-weight: 300
-  margin-top: 10px
+
+ul, ol
+  li
+    padding-bottom: 8px
 
 input
   +border-radius(15px)
