Fixes to permissions on forum parts

--- a/src/base/templates/layout.jade
+++ b/src/base/templates/layout.jade
@@ -43,7 +43,7 @@ html
           #whoami.col-xs-6
             img(src="/plaetjes/pasfoto/1337.vierkant.png")
             div.tag
-              p.name Welkom {{ user.formal_name }}
+              p.name Welkom {{ user.profiel.formal_name }}
               p.uid  {{ user.profiel.uid }}
 
     #topmenu
