Removed usage of compass To eliminate ruby dependency

--- a/src/assets/sass/app.sass
+++ b/src/assets/sass/app.sass
@@ -1,12 +1,11 @@
-@import compass/css3
-@import compass/reset
+@import reset
+@import css3
 @import breadcrumbs
 @import fonts
 @import sidebar
 @import forum
 @import legacy
 @import frontpage
-@import font-awesome-compass
 @import font-awesome
 
 $topbar-h: 60px
