Forgotten templates + forum most recent service

--- a/src/base/templates/main.jade
+++ b/src/base/templates/main.jade
@@ -39,9 +39,7 @@
         div.front-page-block#forum-recent
           h3 Forum Recent
 
-          ul.mededeling
-            li
-              | First!
+          div#mount-forum-recent
 
   .col-lg-4
 
