--- a/src/base/templates/layout.jade
+++ b/src/base/templates/layout.jade
@@ -4,13 +4,7 @@ doctype html
 
 html
   head
-    link(
-      rel="stylesheet"
-      href="{% static 'css/bootstrap.min.css' %}")
     link(href="{% static 'css/app.css' %}" rel="stylesheet")
-
-    script(src="{% static 'scripts/jquery.min.js' %}")
-    script(src="{% static 'scripts/bootstrap.min.js' %}")
 
     block head
 
@@ -53,9 +47,9 @@ html
             i.fa.fa-home
             i.fa.fa-cogs
           li
-            a(href="{% url 'legacy.groepen' %}")
-              | Groepen
-          li.active Actueel
+            Groepen
+          li
+            Actueel
           li
             a(href="{% url 'forum.main' %}")
               | Reformaforum
@@ -63,3 +57,6 @@ html
 
     #all
       block content
+
+  // after the body
+  script(src="{% static 'scripts/app.js' %}")
