I've had it with uis

--- a/src/assets/sass/_variables.sass
+++ b/src/assets/sass/_variables.sass
@@ -6,3 +6,12 @@ $neutral-medium: lighten($neutral-dark, 35%)
 $neutral-light: lighten($neutral-medium, 35%)
 $accent: $blue
 $accent-inv: white
+
+$font-small: 12pt
+$font-default: 14pt
+$font-medium: 14pt
+$font-Medium: 16pt
+$font-large: 22pt
+$font-Large: 24pt
+$font-huge: 26pt
+$font-Huge: 28pt
