--- a/src/assets/sass/app.sass
+++ b/src/assets/sass/app.sass
@@ -2,18 +2,22 @@
 @import css3
 @import breadcrumbs
 @import fonts
+@import variables
 @import sidebar
 @import forum
 @import legacy
 @import frontpage
 @import bootstrap.min
+@import fixed-data-table/dist/fixed-data-table
 
-$topbar-h: 60px
-$topmenu-h: 40px
+$nav-h: 30px
+$nav-c:  #1d64de
+$header-h: 250px
+$header-c: #1d64de
 
 h1, h2, h3
-  font-family: Lato
-  font-weight: 300
+  font-family: Museo
+  font-weight: 500
   margin-bottom: 8px
   margin-top: 10px
 
@@ -25,28 +29,6 @@ h2
 
 h3
   font-size: $font-Medium
-
-ul, ol
-  li
-    padding-bottom: 8px
-
-input
-  +border-radius(15px)
-  height: 30px
-  background-color: white
-  border: 1px solid $neutral-light
-  color: $neutral-dark
-  padding: 6px
-    left: 15px
-
-.divider
-  height: 1px
-  margin:
-    top: 10px
-    left: 0px
-    bottom: 10px
-  width: 100%
-  background-color: $accent
 
 body
   background-color: #e5e5e5
@@ -60,122 +42,123 @@ body
   font-weight: 300
   overflow: hidden
 
-  #topbar
-    position: relative
-    width: 100%
-    height: $topbar-h
-    background-color: white
-    background-image: url('/static/images/blurred.jpg')
-    background-position: 50% -30%
-    background-size: 100% auto
-    position: fixed
-    top: 0px
-    left: 0px
-    z-index: 1001
+#global-nav
+  position: fixed
+  width: 100%
+  height: $nav-h
+  background-color: $nav-c
+  z-index: 1000
+  color: white
+  padding: 8px
+  text-align: center
 
-    #topbar-poly
-      position: absolute
-      left: 0px
-      top: 0px
-      height: 60px
-      width: 100%
+  a
+    font-weight: 300
+    font-size: $font-medium
+    vertical-align: middle
+    margin: 0px
+    color: white
+    font-size: $font-medium
+    font-weight: 300
+    margin:
+      left: 20px
+      right: 20px
 
-      svg
-        position: absolute
-        left: 0px
-        top: 0px
-        width: 100%
-        height: 100%
+div#app
+  position: absolute
+  top: $nav-h
+  width: 100%
+  bottom: 0px
+  z-index: 0
 
-    #logo
-      position: relative
-      height: 60px
-      overflow: hidden
+  background-color: #e5e5e5
 
-      img
-        position: absolute
-        top: -20px
-        height: 100px
+  .container-fluid, .container
+    height: 100%
 
-    #search
-      padding-top: 15px
-      margin-left: 0px
+  .row
+    height: 100%
 
-      input
-        width: 100%
-        max-width: 300px
-
-    #whoami
-      +clearfix
-      padding-top: 10px
-
-      div.tag
-        float: right
-        padding-right: 10px
-        p
-          text-align: right
-
-          &.uid
-            color: #777
-            font-size: $font-small
-
-      img
-        background-color: white
-        +border-radius(100px)
-        width: 40px
-        float: right
-        border: 1px solid #777
-
-  #topmenu
-    +box-shadow(0px 0px 15px rgba(black, 0.15))
-    border: 1px solid white
-
-    position: fixed
-    top: $topbar-h
-    left: 0px
-    height: $topmenu-h
-    width: 100%
-    background-color: #f5f5f5
-    z-index: 1000
-
-    ul
-      width: 100%
-      text-align: center
-      font-size: $font-small
-      font-weight: 400
-      color: #555
-
-      li
-        i
-          padding-right: 8px
-        display: inline-block
-        line-height: 40px
-        padding:
-          left: 15px
-          right: 15px
-
-        &.active
-          color: $accent
-
-  #all
+  div#app-header-fill
     position: absolute
-    top: $topbar-h + $topmenu-h
-    left: 0px
-    right: 0px
-    bottom: 0px
-    overflow: auto
-    overflow-x: hidden
-    z-index: 10
+    top: 0px
+    background-color: $header-c
+    height: $header-h
+    width: 100%
 
-    #background-logo
-      +opacity(0.7)
+  div#side-column
+    margin: 0px
+    padding: 0px
+    height: 100%
+
+    div#side-header-fill
+      background-color: $header-c
+      height: $header-h
+      width: 100%
+
+  #page-menu
+    padding: 30px
+    ul
+      li
+        padding:
+          top: 4px
+          bottom: 4px
+        border:
+          bottom: 1px solid #b4b4b4
+
+  div#content-column
+    position: relative
+    margin: 0px
+    padding: 0px
+    height: 100%
+
+    #header-bg
       position: absolute
-      width: 2000px
-      height: 2000px
-      left: 50%
-      top: -1000px
-      margin-left: -900px
-      background-image: url("/images/beeldmerk.svg")
-      background-repeat: no-repeat
-      background-size: 2000px
-      background-position: 0px 0px
+      z-index: -1
+      height: $header-h
+      top: 0px
+      left: 0px
+      width: 100%
+      background-color: $header-c
+
+    #page-container
+      width: 100%
+      height: 100%
+      padding: 20px
+      padding-top: 40px
+
+      h1
+        color: white
+
+      #page
+        +box-shadow(0px 0px 10px rgba(black, 0.2))
+        +border-radius(2px)
+        background-color: #eeeeee
+        width: 100%
+        margin-top: 30px
+        min-height: 400px
+        font-size: $font-small
+        font-weight: 500
+        color: #263449
+        padding: 15px
+
+        $action-menu-h: 40px
+        #page-action-menu
+          ul
+            width: 100%
+            border-bottom: 1px solid #ddd
+
+            li
+              display: inline
+              vertical-align: middle
+
+            button.action
+              text-transform: uppercase
+              height: $action-menu-h
+              line-height: $action-menu-h
+              background-color: transparent
+              border: none
+                right: 1px solid #ddd
+              padding:
+                left: 15px
+                right: 15px
