Finalized civikaartje draft

--- a/src/assets/sass/colors.sass
+++ b/src/assets/sass/colors.sass
@@ -4,5 +4,6 @@ $dblue: darken(#27CDE3, 10%)
 $neutral-dark: #333333
 $neutral-medium: lighten($neutral-dark, 35%)
 $neutral-light: lighten($neutral-medium, 35%)
+$neutral-ultralight: lighten($neutral-light, 5%)
 $accent: $blue
 $accent-inv: white
