Refactoring and restyling based on UI update

--- a/src/assets/sass/app.sass
+++ b/src/assets/sass/app.sass
@@ -17,7 +17,7 @@ $header-c: #1d64de
 
 h1, h2, h3
   font-family: Museo
-  font-weight: 500
+  font-weight: 300
   margin-bottom: 8px
   margin-top: 10px
 
@@ -29,6 +29,18 @@ h2
 
 h3
   font-size: $font-Medium
+
+p
+  font-weight: lighter
+
+a
+  font-weight: normal
+
+th
+  font-weight: normal
+
+td
+  font-weight: lighter
 
 body
   background-color: #e5e5e5
@@ -141,6 +153,9 @@ div#app
         font-weight: 500
         color: #263449
         padding: 15px
+
+        h1
+          color: rgb(51, 51, 51)
 
         $action-menu-h: 40px
         #page-action-menu
