Forum pagination for the thread list

--- a/src/assets/sass/layout.sass
+++ b/src/assets/sass/layout.sass
@@ -125,7 +125,8 @@ div#app
           display: inline
           vertical-align: middle
 
-        button.action
+        .action
+          display: inline-block
           text-transform: uppercase
           height: $action-menu-h
           line-height: $action-menu-h
