Paginated forum draadje detail

--- a/src/assets/sass/forum.sass
+++ b/src/assets/sass/forum.sass
@@ -3,6 +3,21 @@
 
 // we need to be very specific or the generic layout sass
 // takes over
+#app #page #forum-thread-list
+  #page-action-menu
+    ul
+      border-bottom: 0px
+
+  #page-content
+    table
+      width: 100%
+
+      tr
+        border-bottom: 1px solid #ddd
+        border-top: 1px solid #ddd
+        td
+          padding: 5px
+
 #app #page #forum-thread
   #page-action-menu
     ul
