--- a/src/assets/sass/layout.sass
+++ b/src/assets/sass/layout.sass
@@ -101,6 +101,10 @@ div#app
       h1
         color: white
 
+      #page
+        h1
+          color: rgb(57, 57, 57)
+
   #page
     +box-shadow(0px 0px 10px rgba(black, 0.2))
     +border-radius(2px)
