ProfielLink/Civikaartje merge

--- a/src/assets/sass/app.sass
+++ b/src/assets/sass/app.sass
@@ -9,10 +9,11 @@
 @import legacy
 @import frontpage
 @import bootstrap.min
+@import groepen
 
 h1, h2, h3
   font-family: Museo
-  font-weight: 500
+  font-weight: 300
   margin-bottom: 8px
   margin-top: 10px
 
@@ -24,6 +25,18 @@ h2
 
 h3
   font-size: $font-Medium
+
+p
+  font-weight: lighter
+
+a
+  font-weight: normal
+
+th
+  font-weight: normal
+
+td
+  font-weight: lighter
 
 body
   background-color: #e5e5e5
