--- a/src/assets/sass/_variables.sass
+++ b/src/assets/sass/_variables.sass
@@ -4,6 +4,7 @@ $dblue: darken(#27CDE3, 10%)
 $neutral-dark: #333333
 $neutral-medium: lighten($neutral-dark, 35%)
 $neutral-light: lighten($neutral-medium, 35%)
+$neutral-ultralight: lighten($neutral-light, 7%)
 $accent: $blue
 $accent-inv: white
 
