--- a/src/base/templates/login.html
+++ b/src/base/templates/login.html
@@ -3,14 +3,12 @@
 <html>
   <head>
     <link href="{% static 'css/app.css' %}" rel="stylesheet">
-
-    {% block head %}{% endblock %}
   </head>
   <body>
     <div id="mount-app">
     </div>
 
     <!-- after the content -->
-    <script src="{% static 'scripts/app.js' %}"></script>
+    <script src="{% static 'scripts/login.js' %}"></script>
   </body>
 </html>
