Tiny visual enhancements thread view

--- a/src/assets/sass/forum.sass
+++ b/src/assets/sass/forum.sass
@@ -29,6 +29,8 @@
 
 #app #page #forum-thread
   #page-content
+    padding: 15px
+
     table
       width: 100%
 
@@ -36,5 +38,10 @@
         border-top: none
         border-bottom: 1px solid #ddd
 
+        th,td
+          padding: 5px
+
+        th
+          min-width: 200px
         td
           padding: 5px
