--- a/src/base/templates/main.html
+++ b/src/base/templates/main.html
@@ -3,6 +3,12 @@
 <html>
   <head>
     <link href="{% static 'css/app.css' %}" rel="stylesheet">
+    <script>
+      // json encoded preload data
+      window.preloadData = {
+        user: '{{ current_user_js }}'
+      };
+    </script>
   </head>
   <body>
     <div id="mount-app">
