Verticale detail page

--- a/src/assets/sass/app.sass
+++ b/src/assets/sass/app.sass
@@ -74,6 +74,7 @@ body
           bottom: none !important
         margin: 0px
         outline: none
+        color: white
 
   li.active
     border-bottom: 4px solid white
