--- a/src/assets/sass/groepen.sass
+++ b/src/assets/sass/groepen.sass
@@ -17,3 +17,28 @@
 
   .profielLinkHover:hover
     opacity: 1
+
+#verticale-detail
+  padding: 5px
+
+  div.year
+    +clearfix
+    display: block
+    width: 100%
+
+$photo-w: 120px
+.lid-photo
+  position: relative
+  float: left
+  margin: 5px
+  width: $photo-w
+  height: 1.3*$photo-w
+  overflow: hidden
+  text-align: center
+  border: 1px solid #fff
+
+  img
+    position: absolute
+    left: 50%
+    margin-left: -($photo-w/2)
+    width: $photo-w
