--- a/src/assets/sass/_variables.sass
+++ b/src/assets/sass/_variables.sass
@@ -1,5 +1,5 @@
 $blue : desaturate(#224BAF, 15%)
-$dblue: darken(#27CDE3, 10%)
+$dblue: darken($blue, 10%)
 
 $neutral-dark: #333333
 $neutral-medium: lighten($neutral-dark, 35%)
