--- a/src/assets/sass/app.sass
+++ b/src/assets/sass/app.sass
@@ -53,7 +53,7 @@ body
   overflow: hidden
 
 .nav-tabs
-  background-color: #2aa198
+  background-color: $dblue
   color: white
   font-size: $font-medium
   height: 40px
@@ -63,8 +63,8 @@ body
     line-height: 40px
     height: 40px
     font-weight: lighter
-    border-bottom: 4px solid #2aa198
-    background-color: #2aa198
+    border-bottom: 4px solid $dblue
+    background-color: $dblue
 
     &, &.active
       & > a, a:hover, a.active, a.active:focus, a.active:hover, a:focus
