--- a/src/assets/sass/profiel.sass
+++ b/src/assets/sass/profiel.sass
@@ -3,12 +3,15 @@
 
 // we need to be very specific or the generic layout sass
 // takes over
-#app #page table#profiel-list
-  width: 100%
-  border-top: 1px solid #ddd
+#profiel-detail #page
+  padding: 15px
 
-  tr
-    border-top: none
-    border-bottom: 1px solid #ddd
-  td
-    padding: 10px
+  table#profiel-list
+    width: 100%
+    border-top: 1px solid #ddd
+
+    tr
+      border-top: none
+      border-bottom: 1px solid #ddd
+    td
+      padding: 10px
