--- a/src/assets/sass/groepen.sass
+++ b/src/assets/sass/groepen.sass
@@ -31,8 +31,6 @@ $photo-w: 120px
   position: relative
   float: left
   margin: 5px
-  width: $photo-w
-  height: 1.3*$photo-w
   overflow: hidden
   text-align: center
   border: 1px solid #fff
@@ -40,5 +38,27 @@ $photo-w: 120px
   img
     position: absolute
     left: 50%
-    margin-left: -($photo-w/2)
+
+  &.sm
+    width: $photo-w / 2
+    height: 1.3 * $photo-w / 2
+
+    img
+      width: $photo-w / 2
+      margin-left: -($photo-w / 4)
+
+  &.md
     width: $photo-w
+    height: 1.3 * $photo-w
+
+    img
+      width: $photo-w
+      margin-left: -($photo-w / 2)
+
+  &.lg
+    width: $photo-w * 2
+    height: 1.3 * $photo-w * 2
+
+    img
+      width: $photo-w * 2
+      margin-left: -$photo-w
