--- a/src/base/templates/main.html
+++ b/src/base/templates/main.html
@@ -15,6 +15,6 @@
     </div>
 
     <!-- after the content -->
-    <script src="{% static 'scripts/app.js' %}"></script>
+    <script src="{% static 'scripts/index.js' %}"></script>
   </body>
 </html>
