--- a/src/assets/sass/_variables.sass
+++ b/src/assets/sass/_variables.sass
@@ -1,6 +1,9 @@
 $blue : desaturate(#224BAF, 15%)
 $dblue: darken($blue, 10%)
 
+$light-fg: #F0F0F0
+$light-bg: #F0F0F0
+
 $neutral-dark: #333333
 $neutral-medium: lighten($neutral-dark, 35%)
 $neutral-light: lighten($neutral-medium, 35%)
